--- a/css/Quality.css
+++ b/css/Quality.css
@@ -9,24 +9,48 @@ img.header-image {
 }
 #Banox-paragraph {
     transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition effect */
-    color:#aa892c;
+    color:#007FAC;
+    font-size: 40px;
+  }
+#Qap-paragraph {
+    transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition effect */
+    color:#007FAC;
+    font-size: 40px;
+  }
+#cni-paragraph {
+    transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition effect */
+    color:#007FAC;
     font-size: 40px;
   }
 #BX-content h3{
-    color: #93a836;
+    color: #007FAC;
 }
 #BX-hover-icon {
     transition: transform 0.3s ease; /* Add smooth transition to icon */
-    color: #93a836;
+    color: #007FAC;
 }
 #BX-hover-icon:hover {
+    transform: scale(2); /* Scale up the icon on hover */
+  }
+#Qap-hover-icon {
+    transition: transform 0.3s ease; /* Add smooth transition to icon */
+    color: #007FAC;
+}
+#Qap-hover-icon:hover {
+    transform: scale(2); /* Scale up the icon on hover */
+  }
+#cni-reverse-hover-icon {
+    transition: transform 0.3s ease; /* Add smooth transition to icon */
+    color: #007FAC;
+}
+#cni-reverse-hover-icon:hover {
     transform: scale(2); /* Scale up the icon on hover */
   }
 #BX-getknow {
     position: relative;
     width: 100%;
     height: 400px; /* Adjust the height as needed */
-    background: url('../images/CI-BG.jpeg') no-repeat center center/cover; /* Add your specific image here */
+    background: url('../images/Q-bg.jpeg') no-repeat center center/cover; /* Add your specific image here */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +62,7 @@ img.header-image {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #aa882c8f; /* Black overlay with 50% opacity */
+    background-color: #007eac77; /* Black overlay with 50% opacity */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -115,7 +139,7 @@ img.header-image {
   font-size: 4rem;
   font-family: "librebaskerville-bold";
   margin-bottom: 10px;
-  color: #aa892c;
+  color: #c4161c;
 }
 
 .table-container {
@@ -138,7 +162,7 @@ img.header-image {
   font-size: 1.5rem;
 }
 #banovit-table th {
-  background-color: #aa892c; /* Customize header color */
+  background-color: #c4161c; /* Customize header color */
   color: white;
   font-family: "montserrat-bold";
   font-weight: bold;
@@ -149,7 +173,7 @@ img.header-image {
 }
 
 #banovit-table tbody tr:hover {
-  background-color: #bdd7489a;
+  background-color: #c4161c67;
 }
 
 @media (max-width: 768px) {
@@ -205,7 +229,7 @@ img.header-image {
 }
 
 #CPI-table tbody tr:hover {
-  background-color: #bdd7489a;
+  background-color: #c4161c67;
 }
 
 @media (max-width: 768px) {
@@ -217,6 +241,37 @@ img.header-image {
       padding: 8px;
       font-size: 0.9rem;
   }
+}
+
+#emp-1{
+  background-color: #c4161c; /* Customize header color */
+  
+  
+}
+#emp-2{
+  background-color: #c4161c; /* Customize header color */
+  
+}
+#dvid-o{
+    background-color: #c4161c; /* Customize header color */
+    color: white;
+
+}
+#dvid-t{
+  background-color: #c4161c; /* Customize header color */
+  color: white;
+
+}
+#dvid-th{
+  background-color: #c4161c; /* Customize header color */
+  color: white;
+}
+#dvid-f{
+  background-color: #c4161c; /* Customize header color */
+  color: white;
+}
+#hdr{
+  border-style: hidden;
 }
 #bvit{
     color: #c49534;
@@ -2569,6 +2624,10 @@ img, video {
   
   transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition effect */
 }
+#ctq-paragraph {
+  color: #007dab;
+  transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition effect */
+}
 #maid-paragraph {
   color: #b32d2d;
   font-size: 30px;
@@ -3637,7 +3696,7 @@ color: #83B738;
   letter-spacing: .3rem;
   text-align: center;
   padding-bottom: 1.5rem;
-  color: #aa892c;
+  color: #007dab;
 }
 /* --------------------------------------------------------------- 
  * loader animation - (_layout.scss)
