--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,76 @@ html {
     font-size: 9.375px;
   }
 }
+.link {
+	width: 10rem;
+	height: 10rem;
+	display: inline-block;
+	font: 300 1.55rem/1.4 "montserrat-regular"; 
+	text-transform: uppercase;
+	letter-spacing: 0.1275rem;
+	word-spacing: 0.3em;
+	text-decoration: none;
+}
 
+.link__svg {
+	width: 100%;
+	height: auto;
+	transform-box: fill-box;
+	fill: #007dab;
+	stroke: #2B3338;
+	stroke-width: 0.05em;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+}
+
+.link__cloud {
+	transform-origin: 50% 50%;
+	animation: rotate 60s linear infinite;
+	fill: rgba(255, 255, 255, 0.15);
+}
+
+.link__face,
+.link__arrow {
+	transform-origin: 50% 50%;
+	transition: transform 0.15s cubic-bezier(0.32, 0, 0.67, 0);
+}
+
+.link:hover .link__face,
+.link:hover .link__arrow {
+	transform: scale(1.1);
+	transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1);
+}
+
+.link__arrow {
+	stroke-width: 0.075em;
+}
+
+.link__text {
+	animation: rotateReverse 20s linear infinite;
+	transform-origin: 50% 50%;
+}
+
+.link:hover .link__text {
+	animation-play-state: paused;
+}
+
+.link--alt {
+	font-size: 1.15rem;
+	letter-spacing: 0;
+	word-spacing: 0;
+}
+
+@keyframes rotate {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes rotateReverse {
+	to {
+		transform: rotate(-360deg);
+	}
+}
 html, body {
   height: 100%;
 }
